tests/negative/BindGroupConflict/Clause.mjuvix
module Clause;

  inductive Pair (a : Type) (b : Type) {
   mkPair : a → b → Pair a b
  };

  fst : (a : Type) → (b : Type) → Pair a b → a ;
  fst _ _ (mkPair _ _ x x) ≔ x;

end;
